fix: align centre for mobile 2

--- a/style.css
+++ b/style.css
@@ -669,6 +669,7 @@ select {
 
 .page {
   min-height: 100vh;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
